--- a/cfg/style.cfg
+++ b/cfg/style.cfg
@@ -20,10 +20,13 @@
 Normal,        0,0,\s0\qj\widctlpar\f*Roman*\fs*DefaultFontSize*,\snext0 Normal.
 Def_Font,      0,0,\cs10,\additive\ssemihidden Default Paragraph Font.
 part,          0,0,\s1\qc\sb240\sa120\keepn\f*Roman*\b\fs40,\sbasedon0\snext0 Part.
-chapter,       0,0,\s2\ql\sb240\sa120\keepn\f*Roman*\b\fs40,\sbasedon0\snext0 heading 1.
-section,       0,0,\s3\ql\sb240\sa120\keepn\f*Roman*\b\fs32,\sbasedon0\snext0 heading 2.
-subsection,    0,0,\s4\ql\sb240\sa120\keepn\f*Roman*\b\fs32,\sbasedon0\snext0 heading 3.
-subsubsection, 0,0,\s5\ql\sb240\sa120\keepn\f*Roman*\b\fs24,\sbasedon0\snext0 heading 4.
+#chapter,       0,0,\s2\ql\sb240\sa120\keepn\f*Roman*\b\fs40,\sbasedon0\snext0 heading 1.
+#section,       0,0,\s3\ql\sb240\sa120\keepn\f*Roman*\b\fs32,\sbasedon0\snext0 heading 2.
+chapter,       0,0,\s2\qc\sb480\sa240\keepn\f*Roman*\b\fs40,\sbasedon0\snext0 heading 1.
+section,       0,0,\s3\qc\sb480\sa240\keepn\f*Roman*\b\fs32,\sbasedon0\snext0 heading 2.
+#subsection,    0,0,\s4\ql\sb240\sa120\keepn\f*Roman*\b\fs32,\sbasedon0\snext0 heading 3.
+subsection,    0,0,\s4\ql\sb480\sa240\keepn\f*Roman*\b\fs28,\sbasedon0\snext0 heading 3.
+subsubsection, 0,0,\s5\ql\sb480\sa240\keepn\f*Roman*\b\fs26,\sbasedon0\snext0 heading 4.
 paragraph,     0,0,\s6\ql\sb240\sa120\keepn\f*Roman*\b\fs24,\sbasedon0\snext0 heading 5.
 subparagraph,  0,0,\s7\ql\sb240\sa120\keepn\f*Roman*\b\fs24,\sbasedon0\snext0 heading 6.
 rightpar,      0,0,\s8\qr\sb120\sa120\keep\widctlpar\f*Roman*,\sbasedon0\snext8 rightpar.
@@ -45,7 +48,9 @@ author,        0,0,\s21\qc\sa120\f*Roman*\fs*DefaultFontSize*,\sbasedon0\snext0 
 footer,        0,0,\s22\ql\tqc\tx4536\tqr\tx9072\f*Roman*\fs20,\sbasedon0\snext22 footer.
 header,        0,0,\s23\ql\tqc\tx4536\tqr\tx9072\f*Roman*\fs20,\sbasedon0\snext23 header.
 #
-caption,       0,0,\s30\ql\sb120\sa120\keep\widctlpar\f*Roman*,\sbasedon0\snext0 caption.
+#caption,       0,0,\s30\ql\sb120\sa120\keep\widctlpar\f*Roman*,\sbasedon0\snext0 caption.
+caption figure, 0,0,\s30\qc\sb120\sa120\keep\widctlpar\f*Roman*\fs21,\sbasedon0\snext0 caption figure.
+caption table, 0,0,\s30\ql\sb120\sa120\keep\widctlpar\f*Roman*\fs21,\sbasedon0\snext0 caption table.
 figure,        0,0,\s31\qc\sb120\sa0\keep\widctlpar\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext0 Figure.
 table,         0,0,\s32\qc\sb120\sa0\keep\widctlpar\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext32 Table.
 tabular,       0,0,\s33\qc\sb120\sa0\keep\widctlpar\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext33 Tabular.
@@ -53,16 +58,22 @@ tabbing,       0,0,\s34\qc\sb120\sa0\keep\widctlpar\f*Roman*\fs*CurrentFontSize*
 # 
 quote,         0,0,\s35\qj\li1024\ri1024\fi340\widctlpar\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext35 Quote.
 verbatim,      0,0,\s38\ql\widctlpar\f*Typewriter*\fs*DefaultFontSize*,\snext38 verbatim.
-item,          0,0,\s46\ql\fi-283\li283\lin283\sb0\sa120\widctlpar\tql\tx283\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext46 List.
-list,          0,0,\s47\ql\fi-283\li283\lin283\sb0\sa120\widctlpar\tql\tx283\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext47 List 1.
+#item,          0,0,\s46\ql\fi-283\li283\lin283\sb0\sa120\widctlpar\tql\tx283\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext46 List.
+#list,          0,0,\s47\ql\fi-283\li283\lin283\sb0\sa120\widctlpar\tql\tx283\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext47 List 1.
+item,          0,0,\s46\qj\fi-283\li283\lin283\sb0\sa120\widctlpar\tql\tx283\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext46 List.
+list,          0,0,\s47\qj\fi-283\li283\lin283\sb0\sa120\widctlpar\tql\tx283\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext47 List 1.
+
 #
 latex picture, 0,0,\s50\qc\sb120\sa120\keep\widctlpar\f*Roman*,\sbasedon0\snext0 latex picture.
 subfigure,     0,0,\s51\qc\sb120\sa120\keep\widctlpar\f*Roman*,\sbasedon0\snext0 subfigure.
 #
-bibliography,  0,0,\s61\ql\sb240\sa120\keepn\f*Roman*\b\fs32,\sbasedon0\snext62 bibheading.
-bibitem,       0,0,\s62\ql\fi-567\li567\sb0\sa0\f*Roman*\fs20,\sbasedon0\snext62 bibitem.
+#bibliography,  0,0,\s61\ql\sb240\sa120\keepn\f*Roman*\b\fs32,\sbasedon0\snext62 bibheading.
+bibliography,  0,0,\s61\qc\sb240\sa120\keepn\f*Roman*\b\fs32,\sbasedon0\snext62 bibheading.
+#bibitem,       0,0,\s62\ql\fi-567\li567\sb0\sa0\f*Roman*\fs20,\sbasedon0\snext62 bibitem.
+bibitem,       0,0,\s62\qj\sb0\sa0\f*Roman*\fs24,\sbasedon0\snext62 bibitem.
 endnotes,      0,0,\s64\ql\fi-283\li283\lin283\sb0\sa120\widctlpar\tql\tx283\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext64 endnotes.
-footnote text, 0,0,\s65\ql\fi-113\li397\lin397\f*Roman*\fs*DefaultFontSize*,\sbasedon0\snext65 footnote text.
+#footnote text, 0,0,\s65\ql\fi-113\li397\lin397\f*Roman*\fs*DefaultFontSize*,\sbasedon0\snext65 footnote text.
+footnote text, 0,0,\s65\qj\fi-113\li397\lin397\f*Roman*\fs21,\sbasedon0\snext65 footnote text.
 endnote text,  0,0,\s66\qj\fi-170\li454\lin454\f*Roman*\fs*DefaultFontSize*,\sbasedon0\snext66 endnote text.
 footnote reference, 0,0,\cs62\super,\additive\sbasedon10 footnote reference.
 endnote reference,  0,0,\cs63\super,\additive\sbasedon10 endnote reference.
@@ -73,11 +84,12 @@ acronym,	0,0,\s67\ql\sb60\sa60\keepn\f*Roman*\fs*DefaultFontSize*,\sbasedon0\sne
 abstract_title,         0,0,\s70\qc\sa120\b\f*Roman*\fs*DefaultFontSize*,\sbasedon0\snext71 abstract title.
 abstract,               0,0,\s71\qj\li1024\ri1024\fi340\widctlpar\f*Roman*\fs*DefaultFontSize*,\sbasedon0\snext0 abstract.
 #
-contents,               0,0,\s80\ql\sb240\sa120\keepn\f*Roman*\b\fs*CurrentFontSize*,\sbasedon0\snext0 contents_heading.
-contents_chapter,       0,0,\s81\ql\li425\tqr\tldot\tx8222\sb240\sa60\keepn\f*Roman*\fs*DefaultFontSize*\b,\sbasedon0\snext82 toc 1.
-contents_section,       0,0,\s82\ql\li512\tqr\tldot\tx8222\sb60\sa60\keepn\f*Roman*\fs*DefaultFontSize*,\sbasedon0\snext83 toc 2.
-contents_subsection,    0,0,\s83\ql\li1024\tqr\tldot\tx8222\sb60\sa60\keepn\f*Roman*\fs*DefaultFontSize*,\sbasedon0\snext84 toc 3.
-contents_subsubsection, 0,0,\s84\ql\li1536\tqr\tldot\tx8222\sb60\sa60\keepn\f*Roman*\fs*DefaultFontSize*,\sbasedon0\snext85 toc 4.
-contents_paragraph,     0,0,\s85\ql\li2048\tqr\tldot\tx8222\sb60\sa60\keepn\f*Roman*\fs*DefaultFontSize*,\sbasedon0\snext86 toc 5.
-contents_subparagraph,  0,0,\s86\ql\li2560\tqr\tldot\tx8222\sb60\sa60\keepn\f*Roman*\fs*DefaultFontSize*,\sbasedon0\snext86 toc 6.
+#contents,               0,0,\s80\ql\sb240\sa120\keepn\f*Roman*\b\fs*CurrentFontSize*,\sbasedon0\snext0 contents_heading.
+contents,               0,0,\s80\qc\sb320\sa240\keepn\f*Roman*\b\fs32,\sbasedon0\snext0 contents heading.
+contents_chapter,       0,0,\s81\ql\li425\tqr\tldot\sb320\sa60\keepn\f*Roman*\b\fs*DefaultFontSize*\b,\sbasedon0\snext82 toc 1.
+contents_section,       0,0,\s82\ql\li512\tqr\tldot\sb240\sa60\keepn\f*Roman*\b\fs*DefaultFontSize*,\sbasedon0\snext83 toc 2.
+contents_subsection,    0,0,\s83\ql\li1024\tqr\tldot\sb60\sa60\keepn\f*Roman*\fs*DefaultFontSize*,\sbasedon0\snext84 toc 3.
+contents_subsubsection, 0,0,\s84\ql\li1536\tqr\tldot\sb60\sa60\keepn\f*Roman*\fs*DefaultFontSize*,\sbasedon0\snext85 toc 4.
+contents_paragraph,     0,0,\s85\ql\li2048\tqr\tldot\sb60\sa60\keepn\f*Roman*\fs*DefaultFontSize*,\sbasedon0\snext86 toc 5.
+contents_subparagraph,  0,0,\s86\ql\li2560\tqr\tldot\sb60\sa60\keepn\f*Roman*\fs*DefaultFontSize*,\sbasedon0\snext86 toc 6.
 
