<empty commit message>

--- a/cfg/style.cfg
+++ b/cfg/style.cfg
@@ -51,8 +51,8 @@ header,        0,0,\s23\ql\tqc\tx4536\tqr\tx9072\f*Roman*\fs20,\sbasedon0\snext2
 #caption,       0,0,\s30\ql\sb120\sa120\keep\widctlpar\f*Roman*,\sbasedon0\snext0 caption.
 caption figure, 0,0,\s30\qc\sb120\sa120\keep\widctlpar\f*Roman*\fs21,\sbasedon0\snext0 caption figure.
 caption table, 0,0,\s30\ql\sb120\sa120\keep\widctlpar\f*Roman*\fs21,\sbasedon0\snext0 caption table.
-figure,        0,0,\s31\qc\sb120\sa0\keep\widctlpar\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext0 Figure.
-table,         0,0,\s32\qc\sb120\sa0\keep\widctlpar\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext32 Table.
+# *not used* figure,        0,0,\s31\qc\sb120\sa0\keep\widctlpar\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext0 Figure.
+# *not used* table,         0,0,\s32\qc\sb120\sa0\keep\widctlpar\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext32 Table.
 tabular,       0,0,\s33\qc\sb120\sa0\keep\widctlpar\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext33 Tabular.
 tabbing,       0,0,\s34\qc\sb120\sa0\keep\widctlpar\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext34 Tabbing.
 # 
