Русские списки и стиль таблицы

--- a/cfg/russian.cfg
+++ b/cfg/russian.cfg
@@ -1,7 +1,8 @@
 # Created by Mihail Baikov 4/26/02
+# Nikolay Ishiev, 2012
 PREFACENAME,\CYRV\cyrv\cyre\cyrd\cyre\cyrn\cyri\cyre.
 REFNAME,\CYRS\cyrs\cyrery\cyrl\cyrk\cyri.
-ABSTRACTNAME,\CYRR\cyre\cyrz\cyryu\cyrm\cyre.
+ABSTRACTNAME,\CYRA\cyrn\cyrn\cyro\cyrt\cyra\cyrc\cyri\cyrya.
 BIBNAME,\CYRL\cyri\cyrt\cyre\cyrr\cyra\cyrt\cyru\cyrr\cyra.
 CHAPTERNAME,\CYRR\cyra\cyrz\cyrd\cyre\cyrl.
 APPENDIXNAME,\CYRP\cyrr\cyri\cyrl\cyro\cyrzh\cyre\cyrn\cyri\cyre.
