--- a/cfg/style.cfg
+++ b/cfg/style.cfg
@@ -53,8 +53,8 @@ caption figure, 0,0,\s30\qc\sb120\sa120\keep\widctlpar\f*Roman*\fs21,\sbasedon0\
 caption table, 0,0,\s30\ql\sb120\sa120\keep\widctlpar\f*Roman*\fs21,\sbasedon0\snext0 caption table.
 # *not used* figure,        0,0,\s31\qc\sb120\sa0\keep\widctlpar\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext0 Figure.
 # *not used* table,         0,0,\s32\qc\sb120\sa0\keep\widctlpar\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext32 Table.
-tabular,       0,0,\s33\qc\sb120\sa0\keep\widctlpar\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext33 Tabular.
-tabbing,       0,0,\s34\qc\sb120\sa0\keep\widctlpar\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext34 Tabbing.
+tabular,       0,0,\s33\qc\sb120\sa0\keep\widctlpar\f*Roman*\fs*DefaultFontSize*,\sbasedon0\snext33 Tabular.
+tabbing,       0,0,\s34\qc\sb120\sa0\keep\widctlpar\f*Roman*\fs*DefaultFontSize*,\sbasedon0\snext34 Tabbing.
 # 
 quote,         0,0,\s35\qj\li1024\ri1024\fi340\widctlpar\f*Roman*\fs*CurrentFontSize*,\sbasedon0\snext35 Quote.
 verbatim,      0,0,\s38\ql\widctlpar\f*Typewriter*\fs*DefaultFontSize*,\snext38 verbatim.
