Длинные таблицы работают.

--- a/cfg/ignore.cfg
+++ b/cfg/ignore.cfg
@@ -71,6 +71,8 @@
 \ShowDisplacementBoxes,SINGLE.  # For the BoxedEPSF package:
 \HideDisplacementBoxes,SINGLE.  # For the BoxedEPSF package:
 \htmlrule,SINGLE.               # Note that an optional Parameter won't be ignored
+\endfirsthead,SINGLE.
+\endhead,SINGLE.
 #
 \tolerance,NUMBER.
 \pretolerance,NUMBER.
